div/open-webui/resources/open-webui-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    name: open-webui
